--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    </a>
+                    <!-- </a> --> </div>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
