Fusiform page and updates

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Navigation -->
     <div class="top-logo top-logo-transparent">
         <div class="text-center">
-          <h1 style="margin-top:70px; color:white;">A \ Y</h1>
+          <h1 style="color:white;">A \ Y</h1>
             <a class="" href="index.html">
                 <!-- <img src="../images/logo/logo.png" alt="Exort"> -->
             </a>
@@ -54,7 +54,7 @@
     </div>
     <!-- /top-logo -->
 
-    <nav class="main-nav menu-light menu-transparent js-transparent has-top-logo mrg-top-90">
+    <nav class="main-nav menu-light menu-transparent js-transparent has-top-logo mrg-top-90"> <!-- mrg-top-90-->
         <div class="container">
             <div class="navbar">
                 <div class="navbar-header">
@@ -212,14 +212,14 @@
                 <!-- /folio-item -->
 
                 <div class="folio-item web video">
-                    <a href="images/Alvina/GT/GilmanTunnel_Montage.mp4" class="folio-style-3 lightbox-video mfp-iframe">
+                    <a href="folio_digital_gt.html" class="folio-style-1 project-hover">
                         <div class="folio-image">
                             <img src="images/Alvina/GT/GT_YouWin.png" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
                                         <div class="folio-info">
-                                            <h4 class="folio-tittle">Gilman Tunnel Interactive Projection System</h4>
+                                            <h4 class="folio-tittle">Gilman Tunnel <br>Interactive Projection System</h4>
                                             <p class="droid-serif-italic"></p>
                                         </div>
                                         <!-- /folio-info -->
@@ -478,7 +478,7 @@
 <footer class="bg-light-gray">
     <div class="container section">
 
-        <div class="col-md-4 col-sm-12">
+        <div class="col-md-6 col-sm-6"> <!--col-md-4 col-sm-12-->
             <div class="widget">
                 <div class="more-about-us-widget">
                     <!-- <img class="img-responsive" src="../images/logo/logo2.png" alt=""> -->
@@ -502,7 +502,7 @@
         </div>
         <!-- /column -->
 
-        <div class="col-md-8 col-sm-6">
+        <div class="col-md-6 col-sm-6"> <!--col-md-8 col-sm-6-->
             <div class="widget">
                 <div class="widget-tittle">
                     <h4>Drop Me a Line!</h4>
