--- a/folio_digital_fusiform.html
+++ b/folio_digital_fusiform.html
@@ -78,8 +78,6 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</i></a>
                         </li>
-                        <li><a href="about.html">About</i></a>
-                        </li>
                         <li class="dropdown classic-dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Digital<i class="ti-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                   <!-- <li><a href="">Corrie Cardiology App</a></li> -->
@@ -185,7 +183,8 @@
                     <h2 class="heading-left">Rebuilding the Company Website
                       <span><a href="http://fusiform.co"><i class="ti-angle-right" style="font-weight:bold;"></i></a></span>
                     </h2>
-                    <p class="mrg-top-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie sed.</p>
+                    <p class="mrg-top-50">A place to showcase our company mission, product features, press, and updates. I first started by drafting process flows in Lucidchart to establish seamless navigation, moved to Sketch to create more extensive wireframes. Graphics, including the company logo and styleguide, were primarily designed in Adobe Illustrator. The final website was built using HTML/CSS.</p>
+                    <p><span style="font-weight:bold">Tools Used:</span> Lucidchart, Sketch, Adobe Illustrator, HTML/CSS, Bootstrap</p>
                     <!-- <img class="img-responsive mrg-top-15 mrg-left-auto" src="../images/background/sign.png" alt=""> -->
                 </div>
             </div>
@@ -206,6 +205,7 @@
                     <p class="droid-serif-italic mrg-top-30">Building the Web Application: Feature</p>
                     <h2 class="heading-left">Order Forms</h2>
                     <p class="mrg-top-50">A web application for clinicians and fabricators to create, manage, and track orders. Our digital platform aims to increase efficiency in the orthotics industry with functions such as scan annotation, digital order forms, and seamless communication with our online comments.</p>
+                    <p><span style="font-weight:bold">Tools Used:</span> Adobe Illustrator, HTML/CSS, Bootstrap</p>
                     <!-- <img class="img-responsive mrg-top-15 mrg-left-auto" src="../images/background/sign.png" alt=""> -->
                 </div>
             </div>
@@ -225,7 +225,8 @@
                 <div class="pdd-horizon-30 pdd-vertical-50">
                     <p class="droid-serif-italic mrg-top-30">Building the Web Application: Feature</p>
                     <h2 class="heading-left">Scan Annotation</h2>
-                    <p class="mrg-top-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lorem quam, adipiscing condimentum tristique vel, eleifend sed turpis. Pellentesque cursus arcu id magna euismod in elementum purus molestie sed.</p>
+                    <p class="mrg-top-50">Our CAST web platform allows clinicians and vendors to digitally manage their orders. A unique feature we have is the ability to add, view, edit, and annotate scans with our scan previewer. Comments are also available to ensure clinicians and vendors can collaborate easily.</p>
+                    <p><span style="font-weight:bold">Tools Used:</span> Adobe Illustrator, HTML/CSS, Bootstrap, AngularJS
                     <!-- <img class="img-responsive mrg-top-15 mrg-left-auto" src="../images/background/sign.png" alt=""> -->
                 </div>
             </div>
