--- a/folio_finearts_western.html
+++ b/folio_finearts_western.html
@@ -78,8 +78,6 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</i></a>
                         </li>
-                        <li><a href="about.html">About</i></a>
-                        </li>
                         <li class="dropdown classic-dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Digital<i class="ti-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                   <!-- <li><a href="">Corrie Cardiology App</a></li> -->
@@ -124,20 +122,17 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark" style="background-image:url(images/Alvina/IR/jhu1.jpg)">
+    <section class="header header-md parallax parallax-overlay-dark" style="background-image:url(images/Alvina/Western/IMG_8410-cropped_2077.jpg)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
-                    <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>Perceived Cognition & Tools for Synthesis</b></h4>
-                    <h3 class="">INTERFACES DESIGNED TO MINIMIZE ILLUSIONS IN LEARNING</h3>
-                    <!-- <h5 class="mrg-top-30">LEAD UX & UI DESIGN</h5> -->
-                    <h4 class="heading-alt-style mrg-top-20">Jan 2015 - May 2016</h4>
+                    <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>Western Media</b></h4>
                 </div>
                 <!-- /text-center -->
             </div>
             <!-- /container -->
         </section>
 
-    <h2 class="heading mrg-top-70"></h2>
+    <!-- <h2 class="heading mrg-top-70"></h2> -->
     <p class="mrg-top-70 text-center">
       <div class="container mrg-top-50">
         <!-- Images -->
@@ -198,21 +193,21 @@
       </div>
     </p>
 
+<br><br><br><br>
 
-
-<div class="col-sm-12 mrg-top-70 mrg-btm-20">
-  <h2 class="heading mrg-btm-70">Related Work</h2>
+<h2 class="heading mrg-top-70 mrg-btm-20">Related Work</h2>
+<div class="col-sm-12 col-sm-offset-3 mrg-top-30">
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
-      <a href="folio_.html" class="folio-style-1 ">
+      <a href="folio_finearts_cp.html" class="folio-style-1 ">
         <div class="folio-image">
-          <img src="images/Alvina/Fusiform/square.png" alt="">
+          <img src="images/Alvina/Chinese/cpsquare.jpg" alt="">
           <div class="overlay">
             <div class="overlay-caption">
               <div class="overlay-content">
                 <div class="folio-info">
-                  <h4 class="folio-tittle">Fusiform, Inc.</h4>
+                  <h4 class="folio-tittle">Chinese Painting</h4>
                   <!-- <p class="droid-serif-italic">Web, Branding</p> -->
                 </div>
               </div>
@@ -222,48 +217,14 @@
       </a>
     </div>
     <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
-      <a href="folio_digital_gt.html" class="folio-style-1 ">
+      <a href="folio_finearts_cc.html" class="folio-style-1 ">
         <div class="folio-image">
-          <img src="images/Alvina/GT/background2.png" alt="">
+          <img src="images/Alvina/Chinese/clsquare.jpg" alt="">
           <div class="overlay">
             <div class="overlay-caption">
               <div class="overlay-content">
                 <div class="folio-info">
-                  <h4 class="folio-tittle">Gilman Tunnel Interactive Projection System</h4>
-                  <!-- <p class="droid-serif-italic">Web, Branding</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
-      <a href="folio_digital_hac.html" class="folio-style-1 ">
-        <div class="folio-image">
-          <img src="images/Alvina/HAC/HAC-13.png" alt="">
-          <div class="overlay">
-            <div class="overlay-caption">
-              <div class="overlay-content">
-                <div class="folio-info">
-                  <h4 class="folio-tittle">Homewood Arts Certificate Exhibition</h4>
-                  <!-- <p class="droid-serif-italic">Web, Branding</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="folio-item" style="position: absolute; left: 760px; top: 0px;">
-      <a href="folio_digital_jhulearning.html" class="folio-style-1 ">
-        <div class="folio-image">
-          <img src="images/Alvina/JHU/square.png" alt="">
-          <div class="overlay">
-            <div class="overlay-caption">
-              <div class="overlay-content">
-                <div class="folio-info">
-                  <h4 class="folio-tittle">Perceived Cognition & Tools for Synthesis</h4>
+                  <h4 class="folio-tittle">Chinese Calligraphy</h4>
                   <!-- <p class="droid-serif-italic">Web, Branding</p> -->
                 </div>
               </div>
@@ -276,11 +237,12 @@
 </div>
 
 
+
 <!-- Nav -->
 <section id="portfolio-single-btm" class="pdd-vertical-30">
 <div class="container">
   <div class="col-xs-4">
-    <a href="folio_digital_jhudegreeaudit.html" class="text-left">
+    <a href="folio_finearts_cc.html" class="text-left">
       <h5 class="mrg-top-15"><i class="ti-arrow-left pdd-right-10 font-size-10"></i> Previous</h5>
     </a>
   </div>
@@ -290,7 +252,7 @@
     </a>
   </div>
   <div class="col-xs-4">
-    <a href="folio_digital_tedxjhu.html" class="text-right">
+    <a href="folio_finearts_cp.html" class="text-right">
       <h5 class="mrg-top-15">Next <i class="ti-arrow-right pdd-left-10 font-size-10"></i></h5>
     </a>
   </div>
