--- a/draft.html
+++ b/draft.html
@@ -377,3 +377,124 @@
     <!-- /container -->
 </section>
 <!-- /Features -->
+
+
+
+
+
+
+<!-- GT layout 2 -->
+<div class="work-flow-1 mrg-top-70">
+
+    <div class="right ">
+        <div class="col-sm-6">
+            <!-- <img class="img-responsive" src="images/background/wf-bg-1.jpg" alt=""> -->
+            <!-- <h3 class="text-center mrg-btm-30">Owl 4 item Slide </h3> -->
+            <div class="owl-2 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
+                <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_0552.jpg" alt=""></div>
+                <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_0553.jpg" alt="" style="height:327px;"></div>
+            </div>
+        </div>
+        <!-- /column -->
+
+        <div class="col-sm-6">
+            <div class="work-flow-content">
+                <h1 class="process">01</h1>
+                <h4>Design Proposal & Concept Finalization + Timeline</h4>
+                <p class="mrg-top-30">Lava Hopscotch - interactive, nostalgia component, encourage social interaction, shallow learning curve</p>
+            </div>
+            <!-- / work-flow-content -->
+        </div>
+        <!-- /column -->
+    </div>
+    <!-- /right -->
+
+    <div class="left">
+        <div class="col-sm-6">
+            <div class="work-flow-content">
+                <h1 class="process">02</h1>
+                <h4>Design Elements, Game Logic, and Coding</h4>
+                <p class="mrg-top-30">Style brainstorming, element creation<br>Lava scene<br>Screens</p>
+            </div>
+            <!-- / work-flow-content -->
+        </div>
+        <!-- /column -->
+
+        <div class="col-sm-6">
+          <!-- <h3 class="text-center mrg-btm-30">Owl 4 item Slide </h3> -->
+          <div class="owl-3 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_3741.jpg" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_Start-78.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_Rules-82.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_C1.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_3.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_2.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_1.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_Level1.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_Level2.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_Level3.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_YouWin_2.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_YouWin.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_GameOver.png" alt=""></div>
+          </div>
+            <!-- <img class="img-responsive" src="images/Alvina/GT/IMG_3741.jpg" alt=""> -->
+        </div>
+        <!-- /column -->
+    </div>
+    <!-- /left -->
+
+    <div class="right ">
+        <div class="col-sm-6">
+            <!-- <img class="img-responsive" src="images/background/wf-bg-3.jpg" alt=""> -->
+            <div class="owl-4 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_1077.JPG" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_1256.JPG" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/All1.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/All2.png" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT+Setting+Design_Lava+Scene+-Aerial-.jpg" alt=""></div>
+              <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/LavaSetting2-63.png" alt=""></div>
+            </div>
+        </div>
+        <!-- /column -->
+
+        <div class="col-sm-6">
+            <div class="work-flow-content">
+                <h1 class="process">03</h1>
+                <h4>Iterative Testing</h4>
+                <p class="mrg-top-30">The visual aesthetics, game logic, and animations were all a process that went through numeous iterations. The team went through multiple stages of design, artistic themes, and styles.</p>
+            </div>
+            <!-- / work-flow-content -->
+        </div>
+        <!-- /column -->
+    </div>
+    <!-- /right -->
+
+    <div class="left">
+        <div class="col-sm-6">
+            <div class="work-flow-content">
+                <h1 class="process">04</h1>
+                <h4>Final Presentation: ECE Design Day</h4>
+                <p class="mrg-top-30">Text</p>
+            </div>
+            <!-- / work-flow-content -->
+        </div>
+        <!-- /column -->
+
+        <div class="col-sm-6">
+          <div class="owl-2 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
+            <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/ECEDesignDayPoster.jpg" alt=""></div>
+            <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_1256.JPG" alt=""></div>
+          </div>
+        </div>
+        <!-- /column -->
+    </div>
+    <!-- /left -->
+
+</div>
+<!-- /work-flow-1 -->
+</div>
+<!-- /container -->
+</section>
+<!-- /#work process -->
+
+<!-- End GT Layout 2 -->
