--- a/folio_digital_gt.html
+++ b/folio_digital_gt.html
@@ -78,8 +78,6 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</i></a>
                         </li>
-                        <li><a href="about.html">About</i></a>
-                        </li>
                         <li class="dropdown classic-dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Digital<i class="ti-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                   <!-- <li><a href="">Corrie Cardiology App</a></li> -->
@@ -184,7 +182,7 @@
           <div class="work-flow-1 mrg-top-70">
 
               <div class="right ">
-                  <div class="col-sm-6">
+                  <div class="col-md-6">
                       <!-- <img class="img-responsive" src="images/background/wf-bg-1.jpg" alt=""> -->
                       <!-- <h3 class="text-center mrg-btm-30">Owl 4 item Slide </h3> -->
                       <div class="owl-2 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
@@ -194,11 +192,11 @@
                   </div>
                   <!-- /column -->
 
-                  <div class="col-sm-6">
-                      <div class="work-flow-content">
+                  <div class="col-md-6">
+                      <div class="">
                           <h1 class="process">01</h1>
                           <h4>Design Proposal & Concept Finalization + Timeline</h4>
-                          <p class="mrg-top-30">Lava Hopscotch - interactive, nostalgia component, encourage social interaction, shallow learning curve</p>
+                          <p class="mrg-top-30">The purpose of the project was evaluated, and a game of "Lava Hopscotch" was chosen in order to bring an interactive, nostalgic, and light-hearted projection game to the Gilman Tunnel.</p>
                       </div>
                       <!-- / work-flow-content -->
                   </div>
@@ -207,16 +205,6 @@
               <!-- /right -->
 
               <div class="left">
-                  <div class="col-sm-6">
-                      <div class="work-flow-content">
-                          <h1 class="process">02</h1>
-                          <h4>Design Elements, Game Logic, and Coding</h4>
-                          <p class="mrg-top-30">Style brainstorming, element creation<br>Lava scene<br>Screens</p>
-                      </div>
-                      <!-- / work-flow-content -->
-                  </div>
-                  <!-- /column -->
-
                   <div class="col-sm-6">
                     <!-- <h3 class="text-center mrg-btm-30">Owl 4 item Slide </h3> -->
                     <div class="owl-3 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
@@ -235,27 +223,87 @@
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT_GameOver.png" alt=""></div>
                     </div>
                       <!-- <img class="img-responsive" src="images/Alvina/GT/IMG_3741.jpg" alt=""> -->
+
+                  </div>
+                  <!-- /column -->
+
+                  <div class="col-sm-6">
+                    <div class="">
+                        <h1 class="process">02</h1>
+                        <h4>Design Elements, Game Logic, and Coding</h4>
+                        <p class="mrg-top-30">During this stage, we developed the game logic and started on visual design. I experimented with various game aesthetics (colors, styles, themes) in creating a final set of game screens. After example game screens were designed, the team started converting the elements of the design to the game arena in code.
+                    </div>
+                    <!-- / work-flow-content -->
                   </div>
                   <!-- /column -->
               </div>
               <!-- /left -->
 
-              <div class="right ">
-                  <div class="col-sm-6">
+              <div class="right">
+                  <!-- <div class="col-sm-6"> -->
                       <!-- <img class="img-responsive" src="images/background/wf-bg-3.jpg" alt=""> -->
-                      <div class="owl-4 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
+                      <!-- <div class="owl-4 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_1077.JPG" alt=""></div>
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_1256.JPG" alt=""></div>
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/All1.png" alt=""></div>
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/All2.png" alt=""></div>
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/GT+Setting+Design_Lava+Scene+-Aerial-.jpg" alt=""></div>
                         <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/LavaSetting2-63.png" alt=""></div>
+                      </div> -->
+
+                    <div class="col-md-6">
+                      <div class="portfolio portfolio-isotope gutter masonry col-4">
+                        <!-- Main 2016 -->
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/IMG_1077.JPG" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/IMG_1077.JPG" alt="">
+                            </div>
+                          </a>
+                        </div>
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/All1.png" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/All1.png" alt="">
+                            </div>
+                          </a>
+                        </div>
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/GT+Setting+Design_Lava+Scene+-Aerial-.jpg" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/GT+Setting+Design_Lava+Scene+-Aerial-.jpg" alt="">
+                            </div>
+                          </a>
+                        </div>
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/LavaSetting2-63.png" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/LavaSetting2-63.png" alt="">
+                            </div>
+                          </a>
+                        </div>
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/IMG_1256.JPG" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/IMG_1256.JPG" alt="">
+                            </div>
+                          </a>
+                        </div>
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/All2.png" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/All2.png" alt="">
+                            </div>
+                          </a>
+                        </div>
                       </div>
-                  </div>
+                    </div>
+
+
                   <!-- /column -->
 
-                  <div class="col-sm-6">
-                      <div class="work-flow-content">
+                  <div class="col-md-6">
+                      <div class="">
                           <h1 class="process">03</h1>
                           <h4>Iterative Testing</h4>
                           <p class="mrg-top-30">The visual aesthetics, game logic, and animations were all a process that went through numeous iterations. The team went through multiple stages of design, artistic themes, and styles.</p>
@@ -266,22 +314,42 @@
               </div>
               <!-- /right -->
 
-              <div class="left">
-                  <div class="col-sm-6">
-                      <div class="work-flow-content">
-                          <h1 class="process">04</h1>
-                          <h4>Final Presentation: ECE Design Day</h4>
-                          <p class="mrg-top-30">Text</p>
-                      </div>
-                      <!-- / work-flow-content -->
-                  </div>
-                  <!-- /column -->
-
-                  <div class="col-sm-6">
+              <div class="">
+                  <!-- <div class="col-sm-6">
                     <div class="owl-2 owl-pagi-1 pagi-center pagi-overlay owl-nav-3 nav-overlay">
                       <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/ECEDesignDayPoster.jpg" alt=""></div>
                       <div class="item pdd-horizon-5"><img class="img-responsive" src="images/Alvina/GT/IMG_1256.JPG" alt=""></div>
+                    </div> -->
+                    <div class="col-md-6">
+                      <div class="portfolio portfolio-isotope gutter masonry col-2">
+                        <!-- Main 2016 -->
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/ECEDesignDayPoster.jpg" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/ECEDesignDayPoster.jpg" alt="">
+                            </div>
+                          </a>
+                        </div>
+                        <div class="folio-item" style="">
+                          <a href="images/Alvina/GT/IMG_1256.JPG" class="folio-style-1 lightbox-image mfp-image">
+                            <div class="folio-image">
+                              <img src="images/Alvina/GT/IMG_1256.JPG" alt="">
+                            </div>
+                          </a>
+                        </div>
+                      </div>
                     </div>
+                  </div>
+                  <!-- /column -->
+
+                  <div class="col-md-6">
+                    <div class="">
+                        <h1 class="process">04</h1>
+                        <h4>Final Presentation: ECE Design Day</h4>
+                        <p class="mrg-top-30">Final poster exhibit and projection game demonstration.</p>
+                    </div>
+                    <!-- / work-flow-content -->
+
                   </div>
                   <!-- /column -->
               </div>
