--- a/folio_finearts_cp.html
+++ b/folio_finearts_cp.html
@@ -122,148 +122,181 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark no-border" style="background-image:url(images/Alvina/Oracle/">
+    <section class="header header-md parallax parallax-overlay-dark" style="background-image:url(images/Alvina/Chinese/2009waves_o.jpg)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
-                    <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>The Oracle</b></h4>
-                    <h3 class="">Gunn High School Newspaper</h3>
-                    <h5 class="mrg-top-30">Graphics</h5>
-                    <!-- <h4 class="heading-alt-style mrg-top-20">2015 - 2016</h4> -->
+                    <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>Chinese Painting</b></h4>
                 </div>
                 <!-- /text-center -->
             </div>
             <!-- /container -->
         </section>
 
+    <!-- <h2 class="heading mrg-top-70"></h2> -->
+    <p class="mrg-top-70 text-center">
+      <div class="container mrg-top-50">
+        <!-- Images -->
+        <div class="portfolio portfolio-isotope col-3 masonry gutter" style="position: relative; height: 362.188px;">
 
-<section id="portfolio" class="section" style="margin-top:-90px;">
-  <div class="text-center">
-    <h1 class="heading">Work</h1>
-  </div>
-    <div class="container">
-      <div class="col-md-9 col-md-offset-3">
-      <div class="portfolio portfolio-isotope col-3 gutter mrg-top-30">
-        <!-- Main 2016 -->
-        <div class="folio-item" style="width:200px;">
-          <a href="images/Alvina/Oracle/frontpage.png" class="folio-style-1 lightbox-image mfp-image">
-            <div class="folio-image">
-              <img src="images/Alvina/Oracle/frontpage.png" alt="">
-              <div class="overlay">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <div class="folio-info">
-                      <h4 class="folio-tittle">Uncle Sam</h4>
-                      <p class="droid-serif-italic">News, Front Page</p>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/200flower_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/200flower_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Blossom in the Spring</h4>
+                        <p class="droid-serif-italic">Bronze, 2007 All-American Chinese Brush Painting and Calligraphy Competition, 54'' x 26''</p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/2009waves_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/2009waves_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Raging Waters</h4>
+                        <p class="droid-serif-italic">Bronze,2010 All-American Chinese Brush Painting and Calligraphy Competition, 54'' x 26''</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/2011 - bronze_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/2011 - bronze_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">River Valley</h4>
+                        <p class="droid-serif-italic">Bronze, 2011 All-American Chinese Brush Painting and Calligraphy Competition, 54'' x 26''</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/venice cropped_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/venice cropped_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Venice</h4>
+                        <p class="droid-serif-italic">27'' x 26''</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/misty valley 2 cropped_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/misty valley 2 cropped_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Misty Valley</h4>
+                        <p class="droid-serif-italic">Gold, 2011 All-American Chinese Brush Painting and Calligraphy Competition, 56'' x 27''</p>
+                        <!-- <p class="droid-serif-italic">This landscape was created with the intention to bring depth and contrast to the eye.</p> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/2010 - bronze_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/2010 - bronze_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Hungarian Dance</h4>
+                        <p class="droid-serif-italic">Bronze, 2010 All-American Chinese Brush Painting and Calligraphy Competition, 54'' x 26''</p>
+                        <!-- <p class="droid-serif-italic">An attempt at portrayal of Western culture using traditional Chinese brush techniques.</p> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/2009 - bronze_o.JPG" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/2009 - bronze_o.JPG" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Tranquil Villages</h4>
+                        <p class="droid-serif-italic">Bronze, 2009 All-American Chinese Brush Painting and Calligraphy Competition, 45'' x 27''</p>
+                        <!-- <p class="droid-serif-italic">As if peering from behind the rocks, the view of the village can be seen as one of a tranquil presence. The reflections in the calm river solidify the serenity of the scene.</p> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="folio-item graphic web" style="position: absolute; left: 234px; top: 0px;">
+            <a href="images/Alvina/Chinese/2008 - gold_o.jpg" class="folio-style-1 lightbox-image mfp-image">
+              <div class="folio-image">
+                <img src="images/Alvina/Chinese/2008 - gold_o.jpg" alt="">
+                <div class="overlay">
+                  <div class="overlay-caption">
+                    <div class="overlay-content">
+                      <div class="folio-info">
+                        <h4 class="folio-tittle">Golden Alpines</h4>
+                        <p class="droid-serif-italic">Gold, 2008 All-American Chinese Brush Painting and Calligraphy Competition, 56'' x 27''</p>
+                        <!-- <p class="droid-serif-italic">A primary focus on presentation through color.</p> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
-        <div class="folio-item" style="width:200px;">
-          <a href="images/Alvina/Oracle/frontpageheart.png" class="folio-style-1 lightbox-image mfp-image">
-            <div class="folio-image">
-              <img src="images/Alvina/Oracle/frontpageheart.png" alt="">
-              <div class="overlay">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <div class="folio-info">
-                      <h4 class="folio-tittle">Heart</h4>
-                      <p class="droid-serif-italic">News, Front Page</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="folio-item" style="width:200px;">
-          <a href="images/Alvina/Oracle/recordplayercolorcropped.jpg" class="folio-style-1 lightbox-image mfp-image">
-            <div class="folio-image">
-              <img src="images/Alvina/Oracle/recordplayercolorcropped.jpg" alt="">
-              <div class="overlay">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <div class="folio-info">
-                      <h4 class="folio-tittle">Record Player</h4>
-                      <p class="droid-serif-italic"></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <!-- <div class="folio-item">
-          <a href="images/Alvina/Oracle/twilightsmall.jpg" class="folio-style-1 lightbox-image mfp-image">
-            <div class="folio-image">
-              <img src="images/Alvina/Oracle/twilightsmall.jpg" alt="">
-              <div class="overlay">
-                <div class="overlay-caption">
-                  <div class="overlay-content">
-                    <div class="folio-info">
-                      <h4 class="folio-tittle">Project Name</h4>
-                      <p class="droid-serif-italic">Web, Branding</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div> -->
       </div>
-    </div>
-    </div>
-  </section>
+    </p>
 
-<div class="col-sm-12 mrg-top-70 mrg-btm-20">
-  <h2 class="heading mrg-btm-70">Related Work</h2>
+<br><br><br><br>
+
+<h2 class="heading mrg-top-70 mrg-btm-20">Related Work</h2>
+<div class="col-sm-12 col-sm-offset-3 mrg-top-30">
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
-    <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
-      <a href="folio_digital_gt.html" class="folio-style-1 ">
-        <div class="folio-image">
-          <img src="images/Alvina/GT/background2.png" alt="">
-          <div class="overlay">
-            <div class="overlay-caption">
-              <div class="overlay-content">
-                <div class="folio-info">
-                  <h4 class="folio-tittle">Gilman Tunnel Interactive Projection System</h4>
-                  <!-- <p class="droid-serif-italic">Web, Branding</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
-      <a href="folio_digital_hac.html" class="folio-style-1 ">
-        <div class="folio-image">
-          <img src="images/Alvina/HAC/HAC-13.png" alt="">
-          <div class="overlay">
-            <div class="overlay-caption">
-              <div class="overlay-content">
-                <div class="folio-info">
-                  <h4 class="folio-tittle">Homewood Arts Certificate Exhibition</h4>
-                  <!-- <p class="droid-serif-italic">Web, Branding</p> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
     <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
-      <a href="folio_digital_tedx.html" class="folio-style-1 ">
+      <a href="folio_finearts_western.html" class="folio-style-1 ">
         <div class="folio-image">
-          <img src="images/Alvina/TEDxJHU/square.jpg" alt="">
+          <img src="images/Alvina/Western/square.jpg" alt="">
           <div class="overlay">
             <div class="overlay-caption">
               <div class="overlay-content">
                 <div class="folio-info">
-                  <h4 class="folio-tittle">TEDxJHU</h4>
+                  <h4 class="folio-tittle">Western</h4>
                   <!-- <p class="droid-serif-italic">Web, Branding</p> -->
                 </div>
               </div>
@@ -272,15 +305,15 @@
         </div>
       </a>
     </div>
-    <div class="folio-item" style="position: absolute; left: 760px; top: 0px;">
-      <a href="folio_digital_ssm.html" class="folio-style-1 ">
+    <div class="folio-item" style="position: absolute; left: 380px; top: 0px;">
+      <a href="folio_finearts_cc.html" class="folio-style-1 ">
         <div class="folio-image">
-          <img src="images/Alvina/SSM/square.png" alt="">
+          <img src="images/Alvina/Chinese/clsquare.jpg" alt="">
           <div class="overlay">
             <div class="overlay-caption">
               <div class="overlay-content">
                 <div class="folio-info">
-                  <h4 class="folio-tittle">SSM Logo Branding</h4>
+                  <h4 class="folio-tittle">Chinese Calligraphy</h4>
                   <!-- <p class="droid-serif-italic">Web, Branding</p> -->
                 </div>
               </div>
@@ -293,11 +326,12 @@
 </div>
 
 
+
 <!-- Nav -->
 <section id="portfolio-single-btm" class="pdd-vertical-30">
 <div class="container">
   <div class="col-xs-4">
-    <a href="folio_digital_ssm.html" class="text-left">
+    <a href="folio_finearts_western.html" class="text-left">
       <h5 class="mrg-top-15"><i class="ti-arrow-left pdd-right-10 font-size-10"></i> Previous</h5>
     </a>
   </div>
@@ -307,7 +341,7 @@
     </a>
   </div>
   <div class="col-xs-4">
-    <a href="folio_digital_fusiform.html" class="text-right">
+    <a href="folio_finearts_cc.html" class="text-right">
       <h5 class="mrg-top-15">Next <i class="ti-arrow-right pdd-left-10 font-size-10"></i></h5>
     </a>
   </div>
