--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <header id="home">
         <div class="fs-slider">
             <div id="fs-slider-nav" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner bg" style="background-image:url(images/Alvina/unsplash6.jpeg);">
+                <div class="carousel-inner bg parallax" style="background-image:url(images/Alvina/02cover-02.png);">
 
                     <div class="active item">
                         <div class="hero-caption caption-center caption-height-center">
@@ -161,6 +161,8 @@
     </header>
     <!--/#Full Screen Slider -->
 
+    <!-- <section class="header header-md parallax no-border" style="background-image:url(images/Alvina/02cover-01.png)">
+        </section> -->
 
     <!-- Portfolio -->
     <section id="portfolio" class="section">
