Updated broken links

--- a/folio_digital_hac.html
+++ b/folio_digital_hac.html
@@ -429,7 +429,7 @@
       </a>
     </div>
     <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
-      <a href="folio_digital_tedx.html" class="folio-style-1 ">
+      <a href="folio_digital_tedxjhu.html" class="folio-style-1 ">
         <div class="folio-image">
           <img src="images/Alvina/TEDxJHU/square.jpg" alt="">
           <div class="overlay">
