--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <!-- portfolio-filter -->
 
-            <div class="portfolio portfolio-isotope masonry col-3 gutter">
+            <div class="portfolio portfolio-isotope masonry col-4 gutter">
                 <div class="folio-item web">
                     <div class="folio-style-1 mfp-image">
                         <div class="folio-image">
@@ -343,7 +343,7 @@
                                         <!-- /folio-info -->
                                         <div class="folio-links">
                                           <a href="folio_digital_tedxjhu.html" class="lightbox-video mfp-iframe" title="Project Name"><i class="ti-eye"></i></a>
-                                          <a href="https://youtu.be/tQz4kZ_2wc0" class="lightbox-video mfp-iframe"><i class="ti-video-camera"></i></a>
+                                          <!-- <a href="https://youtu.be/tQz4kZ_2wc0" class="lightbox-video mfp-iframe"><i class="ti-video-camera"></i></a> -->
                                           <a href="folio_digital_tedxjhu.html"><i class="ti-arrow-right"></i></a>
                                         </div>
                                           <!-- /folio-links -->
