--- a/folio_finearts_cc.html
+++ b/folio_finearts_cc.html
@@ -122,10 +122,10 @@
         </section> -->
 
 
-    <section class="header header-md parallax parallax-overlay-dark" style="background-image:url(images/Alvina/Chinese/2009 - bronze - calligraphy cropped_o.jpg)">
+    <section class="header header-md parallax parallax-overlay-light" style="background-image:url(images/Alvina/Chinese/background.jpg)">
             <div class="container text-center">
                 <div class="text-center pdd-btm-30 mrg-top-30">
-                    <h4 class="hero-heading inline-block border border-light thick-md pdd-vertical-30 pdd-horizon-30"><b>Chinese Calligraphy</b></h4>
+                    <h4 class="hero-heading inline-block border border-dark thick-md pdd-vertical-30 pdd-horizon-30"><b>Chinese Calligraphy</b></h4>
                 </div>
                 <!-- /text-center -->
             </div>
@@ -215,7 +215,7 @@
 <br><br><br><br>
 
 <h2 class="heading mrg-top-70 mrg-btm-20">Related Work</h2>
-<div class="col-sm-12 col-sm-offset-3 mrg-top-30">
+<div class="col-sm-12 col-sm-offset-3 mrg-top-30 mrg-btm-20">
   <div class="portfolio portfolio-isotope col-4 gutter" style="position: relative; height: 290px;">
     <!-- Images -->
     <div class="folio-item" style="position: absolute; left: 0px; top: 0px;">
