--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
     <!-- Portfolio -->
     <section id="portfolio" class="section">
       <div class="container">
-          <h2 class="heading">My Work</h2>
-          <!-- <p class="sub-heading">Subheading</p> -->
+          <h2 class="heading">Portfolio</h2>
+          <!-- <p class="sub-heading">Filter by Category</p> -->
       </div>
         <div class="container">
             <div class="portfolio-filter-group folio-fillter-3 mrg-btm-50 mrg-vertical-30 text-center">
@@ -214,7 +214,7 @@
                 <div class="folio-item web video">
                     <div class="folio-style-1">
                         <div class="folio-image">
-                            <img src="images/Alvina/GT/GT_Start-78.png" alt="">
+                            <img src="images/Alvina/GT/background2.png" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
