--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             <!-- <li><i class="ti-map"></i>1422 1st St. Santa Rosa,t CA 94559. USA</li>
                             <li><i class="ti-mobile"></i>+06 162 7509</li>
                             <li><i class="ti-email"></i><a href="mailto:your@email.com">your@email.com</a></li> -->
-                            <li><i class="ti-world"></i><a href="#">www.alvinay.com</a></li>
+                            <li><i class="ti-world"></i><a href="#">allytart.github.io</a></li>
                         </ul>
                     </div>
                     <!-- /contact-inform-widget -->
