Exort Code Update, Nav Bar to Top Side, Portfolio Grid Clickable Without Hover
Primarily layout changes to be more mobile-friendly

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <!-- /top-logo -->
 
-    <nav class="main-nav menu-light menu-transparent js-transparent has-top-logo mrg-top-90"> <!-- mrg-top-90-->
+    <nav class="main-nav menu-light menu-transparent js-transparent  mrg-top-0"> <!-- mrg-top-90-->
         <div class="container">
             <div class="navbar">
                 <div class="navbar-header">
@@ -77,6 +77,19 @@
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</i></a>
                         </li>
+                        <li class="dropdown classic-dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Digital<i class="ti-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                  <!-- <li><a href="">Corrie Cardiology App</a></li> -->
+                                  <li><a href="folio_digital_fusiform.html">Fusiform, Inc.</a></li>
+                                  <li><a href="folio_digital_gt.html">Gilman Tunnel</a></li>
+                                  <li><a href="folio_digital_hac.html">Homewood Arts Cert. Exhibition</a></li>
+                                  <li><a href="folio_digital_jhudegreeaudit.html">JHU Degree Audit</a></li>
+                                  <li><a href="folio_digital_jhulearning.html">Education Tools for Synthesis</a></li>
+                                  <li><a href="folio_digital_tedxjhu.html">TEDxJHU</a></li>
+                                  <li><a href="folio_digital_ssm.html">SSM Publicity & Branding</a></li>
+                                  <li><a href="folio_digital_oracle.html">The Oracle</a></li>
+                            </ul>
+                        </li>
                         <li class="dropdown classic-dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Fine Arts<i class="ti-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                   <li><a href="folio_finearts_western.html">Western</a></li>
@@ -84,20 +97,6 @@
                                   <li><a href="folio_finearts_cc.html">Chinese Calligraphy</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown classic-dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Digital<i class="ti-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                  <!-- <li><a href="">Corrie Cardiology App</a></li> -->
-                                  <li><a href="folio_digital_fusiform.html">Fusiform, Inc.</a></li>
-                                  <li><a href="folio_digital_gt.html">Gilman Tunnel Interactive Projection System</a></li>
-                                  <li><a href="folio_digital_hac.html">Homewood Arts Certificate Exhibition</a></li>
-                                  <li><a href="folio_digital_jhudegreeaudit.html">JHU Degree Audit</a></li>
-                                  <li><a href="folio_digital_jhulearning.html">Perceived Cognition & Tools for Synthesis</a></li>
-                                  <li><a href="folio_digital_tedxjhu.html">TEDxJHU</a></li>
-                                  <li><a href="folio_digital_ssm.html">SSM Logo Branding</a></li>
-                                  <li><a href="folio_digital_oracle.html">The Oracle</a></li>
-                            </ul>
-                        </li>
-
                     </ul>
                     <!-- /nav -->
                 </div>
@@ -181,7 +180,9 @@
             <!-- portfolio-filter -->
 
             <div class="portfolio portfolio-isotope masonry col-4 gutter">
+
                 <div class="folio-item web">
+                  <a href="folio_digital_fusiform.html">
                     <div class="folio-style-1 mfp-image">
                         <div class="folio-image">
                             <img src="images/Alvina/Fusiform/Mockup_Landing1_L_2.png" alt="">
@@ -206,7 +207,7 @@
                             <!-- /overlay -->
                         </div>
                         <!-- folio-image -->
-                    <!-- </a> --> </div>
+                    </div></a>
                     <!-- /folio-style -->
                 </div>
                 <!-- /folio-item -->
@@ -214,7 +215,7 @@
                 <div class="folio-item web video">
                     <div class="folio-style-1">
                         <div class="folio-image">
-                            <img src="images/Alvina/GT/background2.png" alt="">
+                            <img src="images/Alvina/GT/GT_Start-78.png" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
@@ -540,7 +541,7 @@
                             <!-- <li><i class="ti-map"></i>1422 1st St. Santa Rosa,t CA 94559. USA</li>
                             <li><i class="ti-mobile"></i>+06 162 7509</li>
                             <li><i class="ti-email"></i><a href="mailto:your@email.com">your@email.com</a></li> -->
-                            <li><i class="ti-world"></i><a href="#">allytart.github.io</a></li>
+                            <li><i class="ti-world"></i><a href="#">www.alvinay.com</a></li>
                         </ul>
                     </div>
                     <!-- /contact-inform-widget -->
